--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "ch",
   "version": "1.0.0",
-  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/warpdesign/ch.git"
+  },
+  "description": "cat content of binary files - the cat of hexadecimal",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,8 +13,8 @@
   "bin": {
     "ch": "./index.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Nicolas Ramz",
+  "license": "MIT",
   "dependencies": {
     "commander": "^2.15.1"
   }
