--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ch",
+  "name": "cat-hex",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/warpdesign/ch.git"
+    "url": "https://github.com/warpdesign/cat-hex.git"
   },
-  "description": "cat content of binary files - the cat of hexadecimal",
+  "description": "shows content of binary files - the cat of hexadecimal",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
